--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "11.2.0",
-    "marge": "1.0.1",
-    "mochawesome": "7.1.3",
-    "mochawesome-merge": "4.2.2",
+    "marge": "^1.0.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.2.2",
     "serve": "^14.1.2"
   }
 }
