--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "11.2.0",
+    "cypress": "^12.1.0",
     "marge": "1.0.1",
     "mochawesome": "7.1.3",
     "mochawesome-merge": "4.2.2",
